--- a/archives.html
+++ b/archives.html
@@ -156,10 +156,16 @@
               </div>
                 <div class="video-item">
                             <h3>Decoding GenAI Workshop with Prof. Sudarshan Iyengar, IITR</h3>
-                   <iframe width="560" height="315" src="/ml/assets/images/logicloom/DSC_6970.mp4" allowfullscreen></iframe>
+                   <!--<iframe width="560" height="315" src="/ml/assets/images/logicloom/DSC_6970.mp4" allowfullscreen></iframe>-->
+                  <video width="560" height="315" controls><source src="/ml/assets/images/logicloom/DSC_6970.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+</video>
                </div>
                <div class="video-item"><h3>Decoding GenAI Workshop (Clip-2) with Prof. Sudarshan Iyengar, IITR</h3> 
-              <iframe width="560" height="315" src="/ml/assets/images/logicloom/DSC_6992.mp4"  allowfullscreen></iframe>
+              <!--<iframe width="560" height="315" src="/ml/assets/images/logicloom/DSC_6992.mp4"  allowfullscreen></iframe>-->
+                 <video width="560" height="315" controls><source src="/ml/assets/images/logicloom/DSC_6992.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+</video>
               </div>
                 <div class="video-item"><h3>Discussion with Ms. Sasikala B, a LogicLooM participant (venue: ICSR, IITM)</h3> 
               <iframe width="560" height="315" src="https://www.youtube.com/embed/lXLNq44l6co?si=_BtBIGWxaTxe72Sj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
