--- a/gallery.html
+++ b/gallery.html
@@ -164,7 +164,7 @@
           <div class="col-lg-12">
             <div class="ud-hero-content wow fadeInUp" data-wow-delay=".2s">
               <h1 class="ud-hero-title">
-                Archives
+                Gallery
               </h1>
             </div>
           </div>
@@ -178,7 +178,6 @@
         <div class="ud-about-wrapper wow fadeInUp" data-wow-delay=".1s">
           <div class="ud-about-content-wrapper">
             <div class="ud-about-content" style="max-width:100%;">
-              <span class="tag"><i class="lni lni-tag"></i> Photos!</span>
                <div class="gallery">
                         <img src="/ml/assets/images/logicloom/1.jpg" alt="Photo" class="gallery-item">
                         <img src="/ml/assets/images/logicloom/2.jpg" alt="Photo" class="gallery-item">
