--- a/events/logicloom2/rules.html
+++ b/events/logicloom2/rules.html
@@ -13,10 +13,10 @@
 <meta property="og:title" content="LogicLooM 2.0 (Paradox May 2024)" />
 <meta property="og:type" content="website"/>  
 <meta property="og:description" content="Welcome to the webpage for LogicLooM 2.0, one of the best technical events at Paradox, May 2024"/>
-<meta property="og:url" content="https://logicloom.iitmparadox.org"/>
-<meta property="og:image" content="https://logicloom.iitmparadox.org/assets/wiselogo.png"/>
-<link href="https://logicloom.iitmparadox.org/assets/wiselogo.png" rel="icon">
-<link href="https://logicloom.iitmparadox.org/assets/wiselogo.png" rel="apple-touch-icon">
+<meta property="og:url" content=""/>
+<meta property="og:image" content="assets/wiselogo.png"/>
+<link href="assets/wiselogo.png" rel="icon">
+<link href="assets/wiselogo.png" rel="apple-touch-icon">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800" rel="stylesheet">
 <link href="/assets/vendor/aos/aos.css" rel="stylesheet">
 <link href="/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
