--- a/events/logicloom2/speakers.html
+++ b/events/logicloom2/speakers.html
@@ -147,13 +147,13 @@ border-radius:5px;
     
   <div class="flex items-center justify-center flex-wrap gap-4 p-4">
             <div class="card">
-                <a href="" target="_blank"><img src="https://logicloom.netlify.app/storage/profjyothi.PNG" class="w-24 h-24 rounded-full object-cover transition duration-200 hover:scale-110"></a>
+                <a href="" target="_blank"><img src="storage/profjyothi.PNG" class="w-24 h-24 rounded-full object-cover transition duration-200 hover:scale-110"></a>
                 <div class="text-gray-900 text-lg font-bold">Dr. Jyothi Krishnan</div>
                 <div class="text-purple-600" style="text-align: center;">Assistant Teaching Professor<br>CCL, IIT Gandhinagar</div>
                 <p class="text-blue-600" style="text-align: justify;font-size: 12px;">Dr. Jyothi, our special guest for the event launch, is a multifaceted academic with a diverse background spanning across engineering, mathematics and education. With a BTech from NIT Calicut, an MS from our own institute and a PhD from UC Berkeley, she’s <a href="javascript:void(0)" id="read-more-link" style="color:red;">[Read more ...]</a><span id="hidden-content" class="hidden-content">cultivated a rich interest in applied mathematics. Throughout her career, she's ventured into various roles including programming, bridge engineering, mathematical research. Currently serving as an Assistant Teaching Professor at the CCL Lab of IITGN, she plays a pivotal role in shaping the minds of future engineers.</span></p>
             </div>
             <div class="card">
-                <a href="" target="_blank"><img src="https://logicloom.netlify.app/storage/profsudarshan2.PNG" class="w-24 h-24 rounded-full object-cover transition duration-200 hover:scale-110"></a>
+                <a href="" target="_blank"><img src="storage/profsudarshan2.PNG" class="w-24 h-24 rounded-full object-cover transition duration-200 hover:scale-110"></a>
                 <div class="text-gray-900 text-lg font-bold">Dr. Sudarshan Iyengar</div>
                 <div class="text-purple-600" style="text-align: center;">Associate Professor and HOD<br>CSE, IIT Ropar</div>
                 <p class="text-blue-600" style="text-align: justify;font-size: 12px;">Prof. Iyengar currently serves as the head of the Computer Science and Engg. department at IIT RPR. With a Ph.D. from the prestigious Indian Institute of Science (IISc), Prof. Sudarshan is renowned for his exemplary teaching prowess. Having conducted over 350 <a href="javascript:void(0)" id="read-more-link-2" style="color:red;">[Read more ...]</a><span id="hidden-content-2" class="hidden-content-2">captivating popular science talks, he has engaged students spanning from high school to advanced graduate programs. Moreover, Prof. Sudarshan's innovative teaching methodologies have transcended traditional boundaries, with more than 100 hours of his online lectures reaching hundreds of thousands of eager learners. His research interests encompass the dynamic realms of Data Sciences and Analytics, Social Networks, Social Computing, and Collective Intelligence Dynamics. Join us for an enlightening GenAI workshop session featuring him, on 1st June!</span></p>
@@ -164,13 +164,13 @@ border-radius:5px;
 
         <div class="flex items-center justify-center flex-wrap gap-4 p-4">
       <div class="card">
-                <a href="" target="_blank"><img src="https://logicloom.netlify.app/storage/arunsir.jpg" class="w-24 h-24 rounded-full object-cover transition duration-200 hover:scale-110"></a>
+                <a href="" target="_blank"><img src="storage/arunsir.jpg" class="w-24 h-24 rounded-full object-cover transition duration-200 hover:scale-110"></a>
                 <div class="text-gray-900 text-lg font-bold">Mr. Arun Prakash A</div>
                 <div class="text-purple-600" style="text-align: center;">Teaching fellow & Researcher<br>IIT Madras</div>
                 <p class="text-blue-600" style="text-align: justify;font-size: 12px;">Mr. Arun serves as an applied researcher and a teaching fellow for the Fundamentals of DL and LLM courses offered at the degree level of IITM BS in Data Science programme. He's associated with the AI4Bharat tech team and interested in solving complex problems in CV & NLP using DL models <a href="javascript:void(0)" id="read-more-link-4" style="color:red;">[Read more ...]</a><span id="hidden-content-4" class="hidden-content-4">. In addition to DL, he has a strong knowledge of Signal Processing algorithms used for image and speech processing & has worked with transformer-based language models, including LLMs, semantic search and text generation using RAG..</span></p>
             </div>
       <div class="card">
-                <a href="" target="_blank"><img src="https://logicloom.netlify.app/storage/piyushsir2.PNG" class="w-24 h-24 rounded-full object-cover transition duration-200 hover:scale-110"></a>
+                <a href="" target="_blank"><img src="storage/piyushsir2.PNG" class="w-24 h-24 rounded-full object-cover transition duration-200 hover:scale-110"></a>
                 <div class="text-gray-900 text-lg font-bold">Mr. Piyush Wairale</div>
                 <div class="text-purple-600" style="text-align: center;">Teaching Fellow<br>DS, IIT Madras</div>
                 <p class="text-blue-600" style="text-align: justify;font-size: 12px;">Piyush Sir is working as the course instructor for Computational Thinking, DBMS, Privacy and Security in Online Social Media at the IITM BS in Data Science programme. He's a Google and Microsoft-Learn certified educator in the AI-ML domain and also a proud IITM alumnus. <a href="javascript:void(0)" id="read-more-link-3" style="color:red;">[Read more ...]</a><span id="hidden-content-3" class="hidden-content-3">He's a valued mentor and well-wisher of our event, offering guidance and support to our initiatives.</span></p>
@@ -190,7 +190,7 @@ border-radius:5px;
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <a href="/v2"><img src="assets/footerlogo.png" style="max-width:100%;height:auto;"></a>
+            <a href=""><img src="assets/footerlogo.png" style="max-width:100%;height:auto;"></a>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
