--- a/events/logicloom1/announcement/r1-results.html
+++ b/events/logicloom1/announcement/r1-results.html
@@ -19,14 +19,14 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="/v1/assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="/v1/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="/v1/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="/v1/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="/v1/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="/ml/events/logicloom1/assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="/ml/events/logicloom1/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/ml/events/logicloom1/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="/ml/events/logicloom1/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="/ml/events/logicloom1/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="/v1/assets/css/style.css" rel="stylesheet">
+  <link href="/ml/events/logicloom1/assets/css/style.css" rel="stylesheet">
  <style>
         table {
             border-collapse: collapse;
@@ -235,7 +235,7 @@
             </ul>
             <br><p>Last Updated on 05 Dec 2023<br><a href='https://www.free-counters.org/' target='_blank'>free-Counters.org</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=1c0f4d14bb7c5e10213a52734a7b49243fe9d791'></script>
 <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1107649/t/5"></script></p>-->
-            <img src="/v1/assets/img/QR2.svg">
+            <img src="/ml/events/logicloom1/assets/img/QR2.svg">
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
@@ -291,11 +291,11 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="/v1/assets/vendor/aos/aos.js"></script>
-  <script src="/v1/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="/v1/assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="/v1/assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="/v1/assets/vendor/php-email-form/validate.js"></script>
+  <script src="/ml/events/logicloom1/assets/vendor/aos/aos.js"></script>
+  <script src="/ml/events/logicloom1/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="/ml/events/logicloom1/assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="/ml/events/logicloom1/assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="/ml/events/logicloom1/assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
