--- a/events/logicloom2/index.html
+++ b/events/logicloom2/index.html
@@ -242,7 +242,7 @@ border-radius:5px;
 <img src="storage/paradoxtextlogo.png" style="width:300px;height:auto;"><h1 class="mb-4 pb-0"><span>Logic</span>L<i class="bi bi-brilliance"></i><i class="bi bi-brilliance"></i>M 2.0</h1>
       <p class="mb-4 pb-0">May - June 2024 <i class="bi bi-dot"></i> Hybrid</p>
       <a href="#about" class="about-btn scrollto">!pip install logic<br><br>import creativity</a>
-          <br><center><a href="?login=true" target="_blank" class="blink"><span style="color:white;font-size:17px;"><i class="bi bi-megaphone-fill"></i> Round 1 Final Slot on 19th May!</center></span></a>
+          <br><center><a href="?login=true" target="_blank" class="blink"><span style="color:white;font-size:17px;"><i class="bi bi-megaphone-fill"></i> The Finale results have been declared! </center></span></a>
           
     </div>
   </section><!-- End Hero Section -->
@@ -381,25 +381,17 @@ border-radius:5px;
             </div>
 
 <div class="row schedule-item">
-    <div class="col-md-2"><time>17 Apr 2024</time></div>
+    <div class="col-md-2"><time>7 May 2024</time></div>
               <div class="col-md-10">
-                <h4>Registration ends on 9th May!</h4>
-                <p><a href="https://iitmparadox.org/events/19" target="_blank">Click here</a></p>
-              </div>
-            </div>
-            
-<div class="row schedule-item">
-    <div class="col-md-2"><time>15 Apr 2024</time></div>
-              <div class="col-md-10">
-                <h4>Our event guest speakers and mentor details have been released!</h4>
-                <p><a href="speakers.html">Click here</a></p>
+                <h4>Finale Statistics! <span class="rounded-span" style="color:white;">NEW</span></h4>
+                <p><a href=storage/finalestats.pdf" target="_blank">Click here to View</a></p>
               </div>
             </div>
 <div class="row schedule-item">
-              <div class="col-md-2"><time>13 Mar 2024</time></div>
+    <div class="col-md-2"><time>7 May 2024</time></div>
               <div class="col-md-10">
-                <h4>Our event rulebook has been released!</h4>
-                <p><a href="rules.html">Click here</a></p>
+                <h4>Prefinalists :D <span class="rounded-span" style="color:white;">NEW</span></h4>
+                <p><a href=storage/prefinalists.pdf" target="_blank">Click here to View</a></p>
               </div>
             </div>
 <div class="row schedule-item">
