--- a/events/logicloom2/index.html
+++ b/events/logicloom2/index.html
@@ -384,21 +384,21 @@ border-radius:5px;
     <div class="col-md-2"><time>7 May 2024</time></div>
               <div class="col-md-10">
                 <h4>Finale Statistics! <span class="rounded-span" style="color:white;">NEW</span></h4>
-                <p><a href=storage/finalestats.pdf" target="_blank">Click here to View</a></p>
+                <p><a href=storage/finalestats.pdf target="_blank">Click here to View</a></p>
               </div>
             </div>
 <div class="row schedule-item">
     <div class="col-md-2"><time>7 May 2024</time></div>
               <div class="col-md-10">
                 <h4>Prefinalists :D <span class="rounded-span" style="color:white;">NEW</span></h4>
-                <p><a href=storage/prefinalists.pdf" target="_blank">Click here to View</a></p>
+                <p><a href=storage/prefinalists.pdf target="_blank">Click here to View</a></p>
               </div>
             </div>
 <div class="row schedule-item">
     <div class="col-md-2"><time>13 Mar 2024</time></div>
               <div class="col-md-10">
                 <h4>Release of LogicLooM 1.0 Stats</h4>
-                <p><a href="storage/logicloom-v1-release.pdf" target="_blank">Click here to View</a></p>
+                <p><a href="storage/logicloom-v1-release.pdf target="_blank">Click here to View</a></p>
               </div>
             </div>
             
