--- a/gallery.html
+++ b/gallery.html
@@ -126,17 +126,22 @@
                     <a href="javascript:void(0)"> Events </a>
                     <ul class="ud-submenu">
                       <li class="ud-submenu-item">
-                        <a href="" class="ud-submenu-link">
-                          Logic LooM
+                        <a href="/ml/events/logicloom1/" class="ud-submenu-link">
+                          LogicLooM (Margazhi edition)
                         </a>
                       </li>
                       <li class="ud-submenu-item">
-                        <a href="" class="ud-submenu-link">
-                          ML Challenge
+                        <a href="/ml/events/logicloom2/" class="ud-submenu-link">
+                          LogicLooM 2.0 (May - Jun 2024)
                         </a>
                       </li>
                       <li class="ud-submenu-item">
-                        <a href="" class="ud-submenu-link">
+                        <a href="/ml/events/mlc/" class="ud-submenu-link">
+                          ML Challenge 1.0, 2.0
+                        </a>
+                      </li>
+                      <li class="ud-submenu-item">
+                        <a href="/ml/events/pysprint" class="ud-submenu-link">
                           Pythonic Sprint
                         </a>
                       </li>
