--- a/archives.html
+++ b/archives.html
@@ -92,7 +92,7 @@
                   <li class="nav-item nav-item-has-children">
                     <a href="javascript:void(0)"> Events </a>
                     <ul class="ud-submenu">
-                      <li class="ud-submenu-item">
+                     <li class="ud-submenu-item">
                         <a href="/ml/events/logicloom1/" class="ud-submenu-link">
                           LogicLooM (Margazhi edition)
                         </a>
@@ -108,7 +108,7 @@
                         </a>
                       </li>
                       <li class="ud-submenu-item">
-                        <a href="/ml/events/pysprint/" class="ud-submenu-link">
+                        <a href="/ml/events/pysprint" class="ud-submenu-link">
                           Pythonic Sprint
                         </a>
                       </li>
