--- a/events/logicloom2/index.html
+++ b/events/logicloom2/index.html
@@ -309,7 +309,7 @@ border-radius:5px;
             <div class="row schedule-item">
               <div class="col-md-2"><time>17 Apr 2024 - 17 May 2024 17.00</time></div>
               <div class="col-md-10">
-                <h4>Event Registration <span class="rounded-span" style="color:white;">LIVE</span></h4>
+                <h4>Event Registration<!--<span class="rounded-span" style="color:white;">LIVE</span>--></h4>
                 <p>Click <a href="https://iitmparadox.org/events/19" target="_blank">here</a> to register online</p>
               </div>
             </div>
@@ -331,7 +331,7 @@ border-radius:5px;
 <div class="row schedule-item">
               <div class="col-md-2"><time>19 May 2024 <i class="bi bi-dot"></i> 10:00 - 23:59</time></div>
               <div class="col-md-10">
-                <h4>Prelims Phase II (Final) <span class="rounded-span" style="color:white;">Upcoming</span></h4>
+                <h4>Prelims Phase II (Final)<!--<span class="rounded-span" style="color:white;">Upcoming</span>--></h4>
                 <p><i class="bi bi-geo-alt-fill"></i> Online</p>
               </div>
             </div>            
@@ -345,7 +345,7 @@ border-radius:5px;
 <div class="row schedule-item">
               <div class="col-md-2"><time>01 June 2024 <i class="bi bi-dot"></i> 09:30 - 12:30</time></div>
               <div class="col-md-10">
-                <h4>Workshop</h4>
+                <h4>Decoding GenAI Workshop by Prof. Sudarshan Iyengar</h4>
                 <p><i class="bi bi-geo-alt-fill"></i> ICSR Room 1, IIT Madras campus</p>
               </div>
             </div>
@@ -363,7 +363,7 @@ border-radius:5px;
           <!-- Schedule Day 2 -->
           <div role="tabpanel" class="col-lg-9  tab-pane fade" id="participantactivity">
 <h3 class="sub-heading">Participant Activity</h3>
-
+<p><font color="red">Sign in to our app portal to view ...</font></p>
 
           </div>
           <!-- End Schedule Day 2 -->
@@ -371,34 +371,40 @@ border-radius:5px;
           <!-- Schedule Day 3 -->
           <div role="tabpanel" class="col-lg-9  tab-pane fade" id="announcements">
 <h3 class="sub-heading">Announcements</h3>
-
+<div class="row schedule-item">
+    <div class="col-md-2"><time>3 June 2024</time></div>
+              <div class="col-md-10">
+                <h4>Finale Statistics! <span class="rounded-span" style="color:white;">NEW</span></h4>
+                <p><a href="storage/finalestats.pdf" target="_blank">Click here to View</a></p>
+              </div>
+            </div>
+                  <div class="row schedule-item">
+    <div class="col-md-2"><time>25 May 2024</time></div>
+              <div class="col-md-10">
+                <h4>List of Participants Qualified for Finals :D <span class="rounded-span" style="color:white;">NEW</span></h4>
+                <p><a href="storage/prefinale-outcomes.pdf" target="_blank">Click here to View</a></p>
+              </div>
+            </div>
+<div class="row schedule-item">
+    <div class="col-md-2"><time>20 May 2024</time></div>
+              <div class="col-md-10">
+                <h4>Prefinalists List Announced! <span class="rounded-span" style="color:white;">NEW</span></h4>
+                <p><a href="storage/prefinalists.pdf" target="_blank">Click here to View</a></p>
+              </div>
+            </div>
 <div class="row schedule-item">
     <div class="col-md-2"><time>7 May 2024</time></div>
               <div class="col-md-10">
                 <h4>Addressing Suggestions from Margazhi and Changes in LogicLooM! <span class="rounded-span" style="color:white;">NEW</span></h4>
-                <p><a href=storage/changes-compiled.pdf" target="_blank">Click here to View</a></p>
+                <p><a href="storage/changes-compiled.pdf" target="_blank">Click here to View</a></p>
               </div>
             </div>
 
 <div class="row schedule-item">
-    <div class="col-md-2"><time>7 May 2024</time></div>
-              <div class="col-md-10">
-                <h4>Finale Statistics! <span class="rounded-span" style="color:white;">NEW</span></h4>
-                <p><a href=storage/finalestats.pdf target="_blank">Click here to View</a></p>
-              </div>
-            </div>
-<div class="row schedule-item">
-    <div class="col-md-2"><time>7 May 2024</time></div>
-              <div class="col-md-10">
-                <h4>Prefinalists :D <span class="rounded-span" style="color:white;">NEW</span></h4>
-                <p><a href=storage/prefinalists.pdf target="_blank">Click here to View</a></p>
-              </div>
-            </div>
-<div class="row schedule-item">
     <div class="col-md-2"><time>13 Mar 2024</time></div>
               <div class="col-md-10">
                 <h4>Release of LogicLooM 1.0 Stats</h4>
-                <p><a href="storage/logicloom-v1-release.pdf target="_blank">Click here to View</a></p>
+                <p><a href="storage/logicloom-v1-release.pdf" target="_blank">Click here to View</a></p>
               </div>
             </div>
             
