--- a/events/logicloom2/rules.html
+++ b/events/logicloom2/rules.html
@@ -18,12 +18,12 @@
 <link href="assets/wiselogo.png" rel="icon">
 <link href="assets/wiselogo.png" rel="apple-touch-icon">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800" rel="stylesheet">
-<link href="/assets/vendor/aos/aos.css" rel="stylesheet">
-<link href="/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-<link href="/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-<link href="/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-<link href="/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-<link href="/assets/style.css" rel="stylesheet">
+<link href="assets/vendor/aos/aos.css" rel="stylesheet">
+<link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+<link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+<link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+<link href="assets/style.css" rel="stylesheet">
 <style>
         @keyframes blink {
             0% { opacity: 0; }
@@ -119,16 +119,16 @@ border-radius:5px;
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class="nav-link scrollto" href="/#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="/#about">About</a></li>
-          <li><a class="nav-link scrollto" href="/#schedule">Schedule</a></li>
+          <li><a class="nav-link scrollto" href="https://wayanadiitm.github.io/ml/events/logicloom2/#hero">Home</a></li>
+          <li><a class="nav-link scrollto" href="https://wayanadiitm.github.io/ml/events/logicloom2/#about">About</a></li>
+          <li><a class="nav-link scrollto" href="https://wayanadiitm.github.io/ml/events/logicloom2/#schedule">Schedule</a></li>
           <li class="dropdown active"><a href="#" onclick="return false;"><span>Details</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
-            <li><a href="/rules.html">Rule Book</a></li>
-            <li><a href="/#faq">FAQs</a></li>
-            <li><a href="/team.html">Meet the Team</a></li>
-            <li><a href="/speakers.html">Meet Our Speakers</a></li>
-            <li><a href="/feedback.html">What Students Say!</a></li>
+            <li><a href="rules.html">Rule Book</a></li>
+            <li><a href="https://wayanadiitm.github.io/ml/events/logicloom2/#faq">FAQs</a></li>
+            <li><a href="team.html">Meet the Team</a></li>
+            <li><a href="speakers.html">Meet Our Speakers</a></li>
+            <li><a href="feedback.html">What Students Say!</a></li>
           </ul>
         </li>
           <li><a class="nav-link scrollto" href="/#contact">Contact</a></li>
@@ -317,16 +317,16 @@ border-radius:5px;
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Site Map</h4>
             <ul>
-              <li><i class="bi bi-chevron-right"></i> <a href="/v2/">Home</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="https://wayanadiitm.github.io/ml/events/logicloom2/">Home</a></li>
             </ul>
             <ul>
-              <li><i class="bi bi-chevron-right"></i> <a href="/?login=true">Participants App</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="?login=true">Participants App</a></li>
             </ul>
             <ul>
-              <li><i class="bi bi-chevron-right"></i> <a href="/speakers.html">Meet Our Speakers</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="speakers.html">Meet Our Speakers</a></li>
             </ul>
             <ul>
-              <li><i class="bi bi-chevron-right"></i> <a href="/team.html">Meet Our Team</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="team.html">Meet Our Team</a></li>
             </ul>
           </div>
 
@@ -365,14 +365,14 @@ border-radius:5px;
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-chevron-double-up"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="/assets/vendor/aos/aos.js"></script>
-  <script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="/assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="/assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="/assets/vendor/php-email-form/validate.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="/assets/js/main.js"></script>
+  <script src="assets/js/main.js"></script>
   <script>
 document.addEventListener("DOMContentLoaded", function() {
   var preloader = document.getElementById("preloader");
