--- a/events/logicloom1/announcement/1.html
+++ b/events/logicloom1/announcement/1.html
@@ -12,21 +12,21 @@
 <meta content="logicloom,logic,ai,ml,maths,coding,aptitude,criticalthinking,outofthebox,learning,contest,iitm,paradox" name="keywords">
 
 <!-- Favicons -->
-<link href="/v1/assets/img/favicon.png" rel="icon">
-<link href="/v1/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+<link href="/ml/events/logicloom1/assets/img/favicon.png" rel="icon">
+<link href="/ml/events/logicloom1/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="/v1/assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="/v1/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="/v1/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="/v1/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="/v1/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="/ml/events/logicloom1/assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="/ml/events/logicloom1/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/ml/events/logicloom1/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="/ml/events/logicloom1/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="/ml/events/logicloom1/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="/v1/assets/css/style.css" rel="stylesheet">
+  <link href="/ml/events/logicloom1/assets/css/style.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: TheEvent
@@ -45,7 +45,7 @@
       <div id="logo" class="me-auto">
         <!-- Uncomment below if you prefer to use a text logo -->
         <!-- <h1><a href="index.html">The<span>Event</span></a></h1>-->
-        <a href="index.html" class="scrollto"><img src="/v1/assets/img/logo.png" alt="" title=""></a>
+        <a href="" class="scrollto"><img src="/ml/events/logicloom1/assets/img/logo.png" alt="" title=""></a>
       </div>
 
       <nav id="navbar" class="navbar order-last order-lg-0">
@@ -176,14 +176,14 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="/v1/assets/vendor/aos/aos.js"></script>
-  <script src="/v1/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="/v1/assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="/v1/assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="/v1/assets/vendor/php-email-form/validate.js"></script>
+  <script src="/ml/events/logicloom1/assets/vendor/aos/aos.js"></script>
+  <script src="/ml/events/logicloom1/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="/ml/events/logicloom1/assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="/ml/events/logicloom1/assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="/ml/events/logicloom1/assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="/ml/events/logicloom1/assets/js/main.js"></script>
 <script language=JavaScript>
 var message="Function Disabled!";
 
