--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
               <div class="ud-single-team wow fadeInUp" data-wow-delay=".1s">
                 <div class="ud-team-image-wrapper">
                   <div class="ud-team-image">
-                    <img src="assets/images/team/team-03.png" alt="team" />
+                    <img src="/ml/events/logicloom1/assets/img/team/2.jpg" alt="team" />
                   </div>
   
                   <img
@@ -622,7 +622,7 @@
               <div class="ud-single-team wow fadeInUp" data-wow-delay=".1s">
                 <div class="ud-team-image-wrapper">
                   <div class="ud-team-image">
-                    <img src="assets/images/team/team-03.png" alt="team" />
+                    <img src="/ml/events/logicloom1/assets/img/team/5.jpeg" alt="team" />
                   </div>
   
                   <img
