--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
           </div>
         </div>
          <div class="swiper-slide">
-          <!-- Testimonial 6 -->
+          <!-- Testimonial 7 -->
           <div class="ud-single-testimonial">
             <div class="ud-testimonial-ratings">
               <i class="lni lni-star-filled"></i>
@@ -547,6 +547,154 @@
               <div class="ud-testimonial-meta">
                 <h4>Vasanth S</h4>
                 <p>24F3 Participant @ Pythonic Sprint</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <!-- Testimonial 8 -->
+          <div class="ud-single-testimonial">
+            <div class="ud-testimonial-ratings">
+              <i class="lni lni-star-filled"></i>
+              <i class="lni lni-star-filled"></i>
+              <i class="lni lni-star-filled"></i>
+              <i class="lni lni-star-filled"></i>
+              <i class="lni lni-star-filled"></i>
+            </div>
+            <div class="ud-testimonial-content">
+              <p>“The event was so great and well structured that a newbie in ML like me was also able to make a model and even get a descent
+                score for my confidence in my first try making a ML model. Also, the organizers have also managed the event very well.”</p>
+            </div>
+            <div class="ud-testimonial-info">
+              <div class="ud-testimonial-image">
+                <img src="assets/images/testimonials/author-02.png" alt="author" />
+              </div>
+              <div class="ud-testimonial-meta">
+                <h4>Team - Krish, Md. Shah</h4>
+                <p>23F2 Participants @ ML Challenge 1.0</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <!-- Testimonial 9 -->
+          <div class="ud-single-testimonial">
+            <div class="ud-testimonial-ratings">
+              <i class="lni lni-star-filled"></i>
+              <i class="lni lni-star-filled"></i>
+              <i class="lni lni-star-filled"></i>
+              <i class="lni lni-star-filled"></i>
+              <i class="lni lni-star-filled"></i>
+            </div>
+            <div class="ud-testimonial-content">
+              <p>“The event was very nice as I'm a beginner I was able to learn lot of the things which will help me in my ML journey.
+                I also thanks all the mentors for guiding our team and providing us with the resources. I hope more such competitions will be conducted in future for ML. ”</p>
+            </div>
+            <div class="ud-testimonial-info">
+              <div class="ud-testimonial-image">
+                <img src="assets/images/testimonials/author-02.png" alt="author" />
+              </div>
+              <div class="ud-testimonial-meta">
+                <h4>Team - Atharva, Sneha</h4>
+                <p>23F1 Participants @ ML Challenge 1.0</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <!-- Testimonial 10 -->
+          <div class="ud-single-testimonial">
+            <div class="ud-testimonial-ratings">
+              <i class="lni lni-star-filled"></i>
+              <i class="lni lni-star-filled"></i>
+              <i class="lni lni-star-filled"></i>
+              <i class="lni lni-star-filled"></i>
+              <i class="lni lni-star-filled"></i>
+            </div>
+            <div class="ud-testimonial-content">
+              <p>“This was a great Machine Learning Challenge for all the people . With proper management of the task.
+                Freshers in ml got to know the flow and experience in the project and the experienced ones got the chance to show the expertise in their field .”</p>
+            </div>
+            <div class="ud-testimonial-info">
+              <div class="ud-testimonial-image">
+                <img src="assets/images/testimonials/author-02.png" alt="author" />
+              </div>
+              <div class="ud-testimonial-meta">
+                <h4>Team - Shrushti, Jaswith</h4>
+                <p>23F3 Participants @ ML Challenge 1.0</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <!-- Testimonial 11 -->
+          <div class="ud-single-testimonial">
+            <div class="ud-testimonial-ratings">
+              <i class="lni lni-star-filled"></i>
+              <i class="lni lni-star-filled"></i>
+              <i class="lni lni-star-filled"></i>
+              <i class="lni lni-star-filled"></i>
+              <i class="lni lni-star-filled"></i>
+            </div>
+            <div class="ud-testimonial-content">
+              <p>“I am absolutely a beginner and how much i know i have given my best. I felt very great to be able to participate as I learned so much from this challenge.
+                This will definitely help me in future. I will request the team to continue to organize challenges like this always.”</p>
+            </div>
+            <div class="ud-testimonial-info">
+              <div class="ud-testimonial-image">
+                <img src="assets/images/testimonials/author-02.png" alt="author" />
+              </div>
+              <div class="ud-testimonial-meta">
+                <h4>Shreyasee Routray</h4>
+                <p>23F2 Participant @ ML Challenge 1.0</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <!-- Testimonial 12 -->
+          <div class="ud-single-testimonial">
+            <div class="ud-testimonial-ratings">
+              <i class="lni lni-star-filled"></i>
+              <i class="lni lni-star-filled"></i>
+              <i class="lni lni-star-filled"></i>
+              <i class="lni lni-star-filled"></i>
+              <i class="lni lni-star-filled"></i>
+            </div>
+            <div class="ud-testimonial-content">
+              <p>“Very well conducted. Hats off to the organisers - each and every one of them for their dedication and effort in making this a wonderful event.”</p>
+            </div>
+            <div class="ud-testimonial-info">
+              <div class="ud-testimonial-image">
+                <img src="assets/images/testimonials/author-02.png" alt="author" />
+              </div>
+              <div class="ud-testimonial-meta">
+                <h4>Mohit Kumar</h4>
+                <p>Participant @ ML Challenge 1.0</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <!-- Testimonial 13 -->
+          <div class="ud-single-testimonial">
+            <div class="ud-testimonial-ratings">
+              <i class="lni lni-star-filled"></i>
+              <i class="lni lni-star-filled"></i>
+              <i class="lni lni-star-filled"></i>
+              <i class="lni lni-star-filled"></i>
+              <i class="lni lni-star-filled"></i>
+            </div>
+            <div class="ud-testimonial-content">
+              <p>“The mentoring sessions were quite useful. We did not even know basics, but sessions being covered from basics helped. It helped fill our curiosity.”</p>
+            </div>
+            <div class="ud-testimonial-info">
+              <div class="ud-testimonial-image">
+                <img src="assets/images/testimonials/author-02.png" alt="author" />
+              </div>
+              <div class="ud-testimonial-meta">
+                <h4>Team - Pushkar, Devam</h4>
+                <p>24F2 Participants @ ML Challenge 1.0</p>
               </div>
             </div>
           </div>
@@ -706,6 +854,73 @@
               </div>
             </div>
           </div>
+
+<div class=row>
+            <div class="col-xl-3 col-lg-3 col-sm-6">
+              <div class="ud-single-team wow fadeInUp" data-wow-delay=".1s">
+                <div class="ud-team-image-wrapper">
+                  <div class="ud-team-image">
+                    <img src="assets/images/team/team-03.png" alt="team" />
+                  </div>
+  
+                  <img
+                    src="assets/images/team/dotted-shape.svg"
+                    alt="shape"
+                    class="shape shape-1"
+                  />
+                  <img
+                    src="assets/images/team/shape-2.svg"
+                    alt="shape"
+                    class="shape shape-2"
+                  />
+                </div>
+                <div class="ud-team-info">
+                  <h5>Shambhavi Shekhar</h5>
+                  <h6></h6>
+                </div>
+                <ul class="ud-team-socials">
+                  <li>
+                    <a href="" target="_blank">
+                      <i class="lni lni-linkedin"></i>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="col-xl-3 col-lg-3 col-sm-6">
+              <div class="ud-single-team wow fadeInUp" data-wow-delay=".1s">
+                <div class="ud-team-image-wrapper">
+                  <div class="ud-team-image">
+                    <img src="/ml/events/logicloom1/assets/img/team/2.jpg" alt="team" />
+                  </div>
+  
+                  <img
+                    src="assets/images/team/dotted-shape.svg"
+                    alt="shape"
+                    class="shape shape-1"
+                  />
+                  <img
+                    src="assets/images/team/shape-2.svg"
+                    alt="shape"
+                    class="shape shape-2"
+                  />
+                </div>
+                <div class="ud-team-info">
+                  <h5>Rohit Satheesh</h5>
+                  <h6></h6>
+                </div>
+                <ul class="ud-team-socials">
+                  <li>
+                    <a href="" target="_blank">
+                      <i class="lni lni-linkedin"></i>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div></div>
+          
+          
         </div>
       </div>
       </div>
