--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
           <span>Feedbacks</span>
           <h2>What our Participants Say</h2>
           <p>
-            Hardly a few are put up here, collected across LogicLooM, ML Challenge and counting ...
+            Here are just a few highlights from feedback collected across LogicLooM and the ML Challenge. More to come!
           </p>
         </div>
       </div>
@@ -465,7 +465,7 @@
               <i class="lni lni-star-filled"></i>
             </div>
             <div class="ud-testimonial-content">
-              <p>“The prelims were very challenging to solve. But I loved the out of the box thinking application based questions, and it was fun to solve those questions. It required
+              <p>“The prelims was very challenging to solve. But I loved the out of the box thinking application based questions, and it was fun to solve those questions. It required
                 extensive thinking”</p>
             </div>
             <div class="ud-testimonial-info">
@@ -474,7 +474,7 @@
               </div>
               <div class="ud-testimonial-meta">
                 <h4>Chirantan</h4>
-                <p>Participant @ LogicLooM</p>
+                <p>Participant @ LogicLooM 2.0</p>
               </div>
             </div>
           </div>
@@ -490,7 +490,7 @@
               <i class="lni lni-star-filled"></i>
             </div>
             <div class="ud-testimonial-content">
-              <p>“Great initiative, keep going, proud to be a part of this group. You guys are implementing the thoughts not just thinking and sitting idle.”</p>
+              <p>“Great initiative! Keep going, proud to be a part of this group. You guys are implementing the thoughts not just thinking or sitting idle.”</p>
             </div>
             <div class="ud-testimonial-info">
               <div class="ud-testimonial-image">
@@ -562,8 +562,8 @@
               <i class="lni lni-star-filled"></i>
             </div>
             <div class="ud-testimonial-content">
-              <p>“The event was so great and well structured that a newbie in ML like me was also able to make a model and even get a descent
-                score for my confidence in my first try making a ML model. Also, the organizers have also managed the event very well.”</p>
+              <p>“The event was so great and well structured that a newbie in ML like me was also able to make a ML model and even get a descent
+                score, building my confidence in the first try. Also, the organizers have also managed the event very well.”</p>
             </div>
             <div class="ud-testimonial-info">
               <div class="ud-testimonial-image">
@@ -587,8 +587,8 @@
               <i class="lni lni-star-filled"></i>
             </div>
             <div class="ud-testimonial-content">
-              <p>“The event was very nice as I'm a beginner I was able to learn lot of the things which will help me in my ML journey.
-                I also thanks all the mentors for guiding our team and providing us with the resources. I hope more such competitions will be conducted in future for ML. ”</p>
+              <p>“The event was very nice. We're beginners and were able to learn lot of things which will help us in the ML journey.
+                We also thank all the mentors for guiding our team and providing us with the resources. I hope more such competitions will be conducted in future for ML. ”</p>
             </div>
             <div class="ud-testimonial-info">
               <div class="ud-testimonial-image">
@@ -612,8 +612,8 @@
               <i class="lni lni-star-filled"></i>
             </div>
             <div class="ud-testimonial-content">
-              <p>“This was a great Machine Learning Challenge for all the people . With proper management of the task.
-                Freshers in ml got to know the flow and experience in the project and the experienced ones got the chance to show the expertise in their field .”</p>
+              <p>“This was a great Machine Learning Challenge for students across all levels with proper management of the task.
+                Freshers in ML got to know the flow and experience in the project and the experienced ones got the chance to show the expertise in their field.”</p>
             </div>
             <div class="ud-testimonial-info">
               <div class="ud-testimonial-image">
@@ -637,8 +637,8 @@
               <i class="lni lni-star-filled"></i>
             </div>
             <div class="ud-testimonial-content">
-              <p>“I am absolutely a beginner and how much i know i have given my best. I felt very great to be able to participate as I learned so much from this challenge.
-                This will definitely help me in future. I will request the team to continue to organize challenges like this always.”</p>
+              <p>“I am absolutely a beginner and I know I have given my best. It felt great to be able to participate as I learnt so much from this challenge.
+                This will definitely help me in future. I will request the team to continue to organize such challenges always.”</p>
             </div>
             <div class="ud-testimonial-info">
               <div class="ud-testimonial-image">
