--- a/index.html
+++ b/index.html
@@ -892,7 +892,7 @@
               <div class="ud-single-team wow fadeInUp" data-wow-delay=".1s">
                 <div class="ud-team-image-wrapper">
                   <div class="ud-team-image">
-                    <img src="/ml/events/logicloom1/assets/img/team/2.jpg" alt="team" />
+                    <img src="assets/images/team/team-02.png" alt="team" />
                   </div>
   
                   <img
@@ -928,7 +928,7 @@
     <!-- ====== Team End ====== -->
 
     <!-- ====== Contact Start ====== -->
-    <section id="contact" class="ud-contact">
+    <section id="contact" class="ud-contact" style="background-color:white;">
       <div class="container">
         <div class="row justify-content-center align-items-center">
           <div class="col-xl-8 col-lg-7">
