--- a/index.html
+++ b/index.html
@@ -94,16 +94,16 @@
     <!-- ====== Header End ====== -->
 
     <!-- ====== Hero Start ====== -->
-    <section class="ud-hero" id="home">
+    <section class="ud-hero" id="home" style="background: radial-gradient(circle, #1D3F72, #2ED2C9);">
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
             <div class="ud-hero-content wow fadeInUp" data-wow-delay=".2s">
               <h1 class="ud-hero-title">
-                Let's dive into the awesome ML Journey with the Wayanad ML series initiative
+                Dive into the awesome ML Journey with the Wayanad initiative
               </h1>
               <p class="ud-hero-desc">
-              Curious about Machine Learning but have no idea where to start?
+              Curious about Machine Learning but no idea where to start?
               </p>
               <ul class="ud-hero-buttons">
                 <li>
